--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   countup: ^0.1.3
   sqflite: ^2.0.0+2
   path_provider: ^2.0.1
+  percent_indicator: ^2.1.9+1
 
 
   # The following adds the Cupertino Icons font to your application.
